// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Switch renders 1`] = `
<div
  className="sc-iRaSfU dASPpV"
  dir="ltr"
  style={
    Object {
      "overflow": "visible",
    }
  }
>
  <label
    className="sc-gqUUDT kiGojW"
    disabled={false}
    size="sm"
  >
    <input
      checked={true}
      className="sc-llyFOc fNxKzZ"
      id="test-switch-1"
      onChange={[Function]}
      size="sm"
      type="checkbox"
    />
    <span
      checked={true}
      className="sc-khrHlC iXtMCL"
      size="sm"
    />
  </label>
</div>
`;

exports[`Switch renders Buttons 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT dUUges"
      disabled={false}
      size="md"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="button-switch-1"
        onChange={[Function]}
        size="md"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC bhUeiA"
        size="md"
      >
        <span
          className="sc-dOAxzV boWUFJ"
        >
          <p
            className="sc-cQIpJi grZAKh"
          >
            Off
          </p>
          <p
            className="sc-cQIpJi grZAKh"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT cjazYH"
      disabled={false}
      size="lg"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="button-switch-2"
        onChange={[Function]}
        size="lg"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC bhUeiA"
        size="lg"
      >
        <span
          className="sc-dOAxzV boWUFJ"
        >
          <p
            className="sc-cQIpJi grZAKh"
          >
            Off
          </p>
          <p
            className="sc-cQIpJi grZAKh"
          >
            On
          </p>
        </span>
      </span>
    </label>
  </div>
</div>
`;

exports[`Switch renders Disabled state 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fbRPPY"
      disabled={true}
      size="sm"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-disabled-checked"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC iXtMCL"
        size="sm"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fbRPPY"
      disabled={true}
      size="sm"
    >
      <input
        checked={false}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-disabled"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={false}
        className="sc-khrHlC jagbOf"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders Theme variant 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT jLXksI"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-llyFOc cgfpdg"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC hRcSLq"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fNMaSn"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-llyFOc gxTERg"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC UQFTr"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT kiGojW"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-llyFOc gxTERg"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC UQFTr"
        size="sm"
      />
    </label>
  </div>
</div>
`;

exports[`Switch renders different Sizes 1`] = `
<div
  className="flex gap-20 items-center"
>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT jLXksI"
      disabled={false}
      size="2xs"
    >
      <input
        checked={true}
        className="sc-llyFOc cuXITZ"
        id="test-switch-1"
        onChange={[Function]}
        size="2xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC HPTpi"
        size="2xs"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT fNMaSn"
      disabled={false}
      size="xs"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-2"
        onChange={[Function]}
        size="xs"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC iXtMCL"
        size="xs"
      />
    </label>
  </div>
  <div
    className="sc-iRaSfU dASPpV"
    dir="ltr"
    style={
      Object {
        "overflow": "visible",
      }
    }
  >
    <label
      className="sc-gqUUDT kiGojW"
      disabled={false}
      size="sm"
    >
      <input
        checked={true}
        className="sc-llyFOc fNxKzZ"
        id="test-switch-3"
        onChange={[Function]}
        size="sm"
        type="checkbox"
      />
      <span
        checked={true}
        className="sc-khrHlC iXtMCL"
        size="sm"
      />
    </label>
  </div>
</div>
`;
